# rust_notes

./: EXTENSION_GUIDE.md  README.md  note.txt
Design-Patterns-and-Best-Practices-in-Rust-main/Design-Patterns-and-Best-Practices-in-Rust-main/ch10/samsa/: Cargo.toml
Design-Patterns-and-Best-Practices-in-Rust-main/Design-Patterns-and-Best-Practices-in-Rust-main/ch10/samsa/src/: consumer.rs  error.rs  lib.rs  producer.rs  typestate_consumer.rs
Design-Patterns-and-Best-Practices-in-Rust-main/Design-Patterns-and-Best-Practices-in-Rust-main/ch12/samsa/: Cargo.toml
Design-Patterns-and-Best-Practices-in-Rust-main/Design-Patterns-and-Best-Practices-in-Rust-main/ch12/samsa/examples/: basic_pubsub.rs  complete_service.rs
Design-Patterns-and-Best-Practices-in-Rust-main/Design-Patterns-and-Best-Practices-in-Rust-main/ch12/samsa/src/: broker.rs  closures.rs  config.rs  consumer.rs  lib.rs  message.rs  pattern_matching.rs  pipeline.rs  producer.rs  resources.rs  sealed.rs  service.rs  storage.rs
Design-Patterns-and-Best-Practices-in-Rust-main/Design-Patterns-and-Best-Practices-in-Rust-main/ch12/samsa/tests/: integration_tests.rs
Programming-Rust/netiquette-main/: Cargo.toml  LICENSE-MIT  README.md
Programming-Rust/netiquette-main/src/: error.rs  lib.rs  limiter.rs
Rust-Programming-Master-Class-from-Beginner-to-Expert-main/17 - Error Handling/: 1 - Rust Error Handling approach.txt  2 - Propogating Errors.txt  5 - Layered Outcomes Wrapping Results and Options in Rust (Part 1).txt  6 - Layered Outcomes Wrapping Results and Options in Rust (Part 2).txt  7 - anyhow.txt  8 - thiserror.txt
Rust-Programming-Master-Class-from-Beginner-to-Expert-main/Rust-Programming-Master-Class-from-Beginner-to-Expert-main/17 - Error Handling/: 3 - Multiple Error Types .txt  4 - Chaining Question Marks.txt
Rust-main/examples/001_hello_world/: Cargo.toml
Rust-main/examples/003_named_place_holders/: Cargo.toml
Rust-main/examples/004_using_rust_tools/: Cargo.toml
Rust-main/examples/005_emi_calulator/: Cargo.toml
Rust-main/examples/006_print_float_hex_binary/: Cargo.toml
Rust-main/examples/007_r_tagging_strings/: Cargo.toml
Rust-main/examples/008_std_lib_funs_slice/: Cargo.toml
Rust-main/examples/009_tuple_pattern_matching_using_match/: Cargo.toml
Rust-main/examples/011_if_let_else_if_let_else/: Cargo.toml
hello/: .gitignore
no_nonesense_rust/: 00_welcome.txt  01_setup.txt  02_text.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt
project_template/: .gitignore  Cargo.toml  README.md
project_template/src/: cli.rs  error.rs  main.rs  utils.rs
project_template/tests/: integration_test.rs
(+167 files in other folders)
