[package]
name = "os-core-utils"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Rebuilding core OS system utilities in Rust"
license = "GPL-3.0"
repository = "https://github.com/noahbean33/Rebuilding-the-OS-Core-System-Utilities-Hackathon"
readme = "README.md"
keywords = ["os", "utilities", "coreutils", "system"]
categories = ["command-line-utilities", "os"]

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
