[package]
name = "netiquette"
version = "0.1.2"
edition = "2024"
description = "A rate-limiter for politely crawling the Web"
documentation = "https://docs.rs/netiquette"
readme = "README.md"
homepage = "https://github.com/ProgrammingRust/netiquette"
repository = "https://github.com/ProgrammingRust/netiquette"
license = "MIT or Apache-2.0"

[dependencies]
moka = { version = "0.12.13", features = ["sync"] }
psl = "2.1.190"
reqwest = "0.13.2"
texting_robots = "0.2.2"
tokio = { version = "1.49.0", features = ["sync"] }
