[package]
name = "samsa"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[[example]]
name = "basic_pubsub"
path = "examples/basic_pubsub.rs"

[[example]]
name = "type_system_patterns"
path = "examples/type_system_patterns.rs"