[package]
name = "samsa"
version = "1.0.0"
edition = "2021"
description = "A complete publish/subscribe microservice demonstrating Rust design patterns"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.9"

[[example]]
name = "basic_pubsub"
path = "examples/basic_pubsub.rs"

[[example]]
name = "type_system_patterns"
path = "examples/type_system_patterns.rs"

[[example]]
name = "functional_patterns"
path = "examples/functional_patterns.rs"

[[example]]
name = "complete_service"
path = "examples/complete_service.rs"